Tests/correct_output_compiled.f90


MODULE module_length_errors
USE, INTRINSIC :: iso_c_binding
implicit none
! Found excessively long name.
! INTEGER(C_INT), parameter, public :: this_macro_is_too_long_to_be_a_fortran_macro_because_there_are_line_limits_in_fortran = 1
INTERFACE
SUBROUTINE this_macr_name_is_exactly_63_characters_long_thus_should_be_ok() BIND(C)
! ;
END SUBROUTINE this_macr_name_is_exactly_63_characters_long_thus_should_be_ok
END INTERFACE
! Found excessively long name.
! INTEGER(C_INT), public, BIND(C) :: this_is_not_a_fancy_function_but_you_notice_that_it_is_also_too_long_for_fortran
REAL(C_DOUBLE), public, BIND(C) :: but_this_one_should_be_just_barely_short_enough_to_be_accepted_
REAL(C_DOUBLE), public, BIND(C) :: this_var_name_is_exactly_63_characters_long_thus_should_be_ok__
TYPE, BIND(C) :: this_struct_name_is_exactly_one_character_too_long_for_fortran_
    INTEGER(C_INT) :: this_struct_fild_is_exactly_one_character_too_long_for_fortran_
END TYPE this_struct_name_is_exactly_one_character_too_long_for_fortran_
! Found excessively long line.
! TYPE(this_struct_name_is_exactly_one_character_too_long_for_fortran_), public, BIND(C) :: this_struct_vari_is_exactly_one_character_too_long_for_fortran
TYPE, BIND(C) :: this_strct_name_is_exactly_63_characters_long_thus_should_be_ok
    INTEGER(C_INT) :: this_strct_fild_is_exactly_63_characters_long_thus_should_be_ok
END TYPE this_strct_name_is_exactly_63_characters_long_thus_should_be_ok
! Found excessively long line.
! TYPE(this_strct_name_is_exactly_63_characters_long_thus_should_be_ok), public, BIND(C) :: this_strct_vari_is_exactly_63_characters_long_thus_should_be_ok
! Found excessively long name.
! TYPE, BIND(C) :: this_typdef_name_is_exactly_one_character_too_long_for_fortran
!     INTEGER(C_INT)::this_typdef_name_is_exactly_one_character_too_long_for_fortran_C_INT
! END TYPE this_typdef_name_is_exactly_one_character_too_long_for_fortran
TYPE, BIND(C) :: this_typdf_name_is_exactly_63_characters_long_thus_should
    INTEGER(C_INT)::this_typdf_name_is_exactly_63_characters_long_thus_should_C_INT
END TYPE this_typdf_name_is_exactly_63_characters_long_thus_should
! Found excessively long name.
! ENUM, BIND(C) ! this_enum_name_is_exactly_one_character_too_long_for_fortran____
! ENUMERATOR :: this_enum_vari_is_exactly_one_character_too_long_for_fortran____ = 0
! END ENUM ! this_enum_name_is_exactly_one_character_too_long_for_fortran____
ENUM, BIND(C) ! this_enum_name_is_exactly_63_characters_long_thus_should_be_ok
ENUMERATOR :: this_enum_vari_is_exactly_63_characters_long_thus_should_be_ok = 0
END ENUM ! this_enum_name_is_exactly_63_characters_long_thus_should_be_ok
INTERFACE
! Found excessively long line.
! INTEGER(C_INT) FUNCTION this_function_will_produce_lines_too_long_woe_is_us(argument1, argument2, argument3, argument4, argument5, argument6) BIND(C)
!     USE iso_c_binding, only: C_CHAR, C_DOUBLE, C_INT, C_PTR
!     import
!     INTEGER(C_INT), value :: argument1
!     REAL(C_DOUBLE), value :: argument2
!     TYPE(C_PTR), value :: argument3
!     CHARACTER(C_CHAR), value :: argument4
!     TYPE(C_PTR), value :: argument5
!     INTEGER(C_INT), value :: argument6
! END FUNCTION this_function_will_produce_lines_too_long_woe_is_us
! 
! Found excessively long line.
! SUBROUTINE this_function_will_also_produce_lines_too_long_woe_is_us(argument1, argumnet2, argument3, argument4, argument5, argumnet6) BIND(C)
!     USE iso_c_binding, only: C_CHAR, C_DOUBLE, C_INT, C_PTR
!     import
!     INTEGER(C_INT), value :: argument1
!     REAL(C_DOUBLE), value :: argumnet2
!     TYPE(C_PTR), value :: argument3
!     CHARACTER(C_CHAR), value :: argument4
!     TYPE(C_PTR), value :: argument5
!     INTEGER(C_INT), value :: argumnet6
! END SUBROUTINE this_function_will_also_produce_lines_too_long_woe_is_us
! 
! Found excessively long name.
! INTEGER(C_INT) FUNCTION this_function_is_exactly_one_character_too_long_for_fortran_woe_() BIND(C)
!     USE iso_c_binding, only: C_INT
!     import
! END FUNCTION this_function_is_exactly_one_character_too_long_for_fortran_woe_
! 
! Found excessively long name.
! SUBROUTINE this_subroutn_is_exactly_one_character_too_long_for_fortran_woe_() BIND(C)
!     USE iso_c_binding
!     import
! END SUBROUTINE this_subroutn_is_exactly_one_character_too_long_for_fortran_woe_
! 
REAL(C_DOUBLE) FUNCTION this_func_name_is_exactly_63_characters_long_thus_should_be_ok_() BIND(C)
    USE iso_c_binding, only: C_DOUBLE
    import
END FUNCTION this_func_name_is_exactly_63_characters_long_thus_should_be_ok_

SUBROUTINE this_subr_name_is_exactly_63_characters_long_thus_should_be_ok() BIND(C)
    USE iso_c_binding
    import
END SUBROUTINE this_subr_name_is_exactly_63_characters_long_thus_should_be_ok

END INTERFACE
END MODULE module_length_errors
! The following Fortran code was generated by the h2m-AutoFortran Tool.
! See the h2m README file for credits and help information.

MODULE module_macro_suffixes
USE, INTRINSIC :: iso_c_binding
implicit none
INTEGER(C_LONG_LONG), parameter, public :: my_long_long = 10000000000
INTEGER(C_LONG_LONG), parameter, public :: my_u_long_long = 10000000000
REAL(C_FLOAT), parameter, public :: my_float = 25
REAL(C_LONG_DOUBLE), parameter, public :: exp_check = .0075e5
! Found unrecognized macro.
! bad_exp .045e3E4
REAL(C_FLOAT), parameter, public :: my_other_float = 90
REAL(C_LONG_DOUBLE), parameter, public :: my_long_float = 100000000.0
! Found unrecognized macro.
! my_illegal_float 1000.0LL
! Found unrecognized macro.
! my_illegal_float_2 10000.5fL
INTEGER(C_INT), parameter, public :: my_int_parens = -5
REAL(C_FLOAT), parameter, public :: my_float_parens = -45.4
INTEGER(C_LONG), parameter, public :: my_hex = Z'ff03b'
INTEGER(C_INT), parameter, public :: my_hex_u = Z'ff02bf'
INTEGER(C_INT), parameter, public :: my_oct_u = O'234'
INTEGER(C_LONG_LONG), parameter, public :: my_oct_l_l = O'424235'
INTEGER(C_LONG), parameter, public :: my_bin_l = B'0101'
INTEGER(C_INT), parameter, public :: my_bin_u = B'0101'
INTEGER(C_INT), parameter, public :: my_bin_u_paren = B'1010'
INTEGER(C_INT), parameter, public :: my_bin_paren = B'1010'
! Found unrecognized macro.
! illegal_1 343uu
! Found unrecognized macro.
! illegal_2 432LLLu
! Found unrecognized macro.
! illegal_3 0452lLuU
! Found unrecognized macro.
! illegal_4 343.0ff
! Found unrecognized macro.
! illegal_5 3420fL
END MODULE module_macro_suffixes
! The following Fortran code was generated by the h2m-AutoFortran Tool.
! See the h2m README file for credits and help information.

MODULE module_macro_tests
USE, INTRINSIC :: iso_c_binding
implicit none
INTEGER(C_INT), parameter, public :: my_integer = 45
REAL(C_DOUBLE), parameter, public :: my_double = 34.5
INTEGER(C_INT), parameter, public :: my_binary = B'10101101'
INTEGER(C_INT), parameter, public :: my_binary_caps = B'000'
! Found unrecognized macro.
! my_not_binary 0B20
! Found unrecognized macro.
! another_not_bin b10101
INTEGER(C_INT), parameter, public :: my_odd_hex = Z'00ff'
INTEGER(C_INT), parameter, public :: yet_another_hex = Z'ff00'
INTEGER(C_INT), parameter, public :: my_octal = O'5234'
INTEGER(C_INT), parameter, public :: not_octal = 08323
INTEGER(C_LONG), parameter, public :: my_other_not_octal = 0832
INTEGER(C_LONG), parameter, public :: my_other_int = 345
INTEGER(C_LONG), parameter, public :: my_unsigned_int = 45
INTEGER(C_INT), parameter, public :: my_hex = Z'345'
INTEGER(C_INT), parameter, public :: my_other_hex = Z'fedab'
! Found unrecognized macro.
! my_not_hex 0xfg01
! Found unrecognized macro.
! other_not_hex xf01a
INTEGER(C_LONG), parameter, public :: my_long = 123
CHARACTER(1), parameter, public :: my_char = 'a'
CHARACTER(8), parameter, public :: my_string = "a string"
INTERFACE
SUBROUTINE my_arg_macro(x, y) BIND(C)
!  x + y
END SUBROUTINE my_arg_macro
END INTERFACE
INTERFACE
SUBROUTINE swap_trick(x, y) BIND(C)
!  {x ^= y; y ^= x; x ^= y;}
END SUBROUTINE swap_trick
END INTERFACE
INTERFACE
SUBROUTINE multi_line(x) BIND(C)
!  {  \
!     x++;  \
!     x--;  \
! }
END SUBROUTINE multi_line
END INTERFACE
END MODULE module_macro_tests
! The following Fortran code was generated by the h2m-AutoFortran Tool.
! See the h2m README file for credits and help information.

MODULE module_name_conflicts
USE, INTRINSIC :: iso_c_binding
implicit none
INTEGER(C_INT), parameter, public :: y = 1
TYPE, BIND(C) :: x
    INTEGER(C_INT) :: placeholder
END TYPE x
! Found duplicate identifier.
! INTEGER(C_INT), public, BIND(C) :: x
! Found duplicate identifier.
! TYPE, BIND(C) :: y
!     INTEGER(C_INT) :: placeholder
! END TYPE y
TYPE, BIND(C) :: z
    INTEGER(C_INT) :: placeholder
END TYPE z
! Found duplicate identifier.
! TYPE, BIND(C) :: z
!     TYPE(C_PTR)::z_C_PTR
! END TYPE z
TYPE, BIND(C) :: n
    INTEGER(C_INT) :: placeholder
END TYPE n
! Found duplicate identifier.
! INTEGER(C_INT), public, BIND(C) :: n(1)
INTEGER(C_INT), public, BIND(C) :: h2m_v
! Found duplicate identifier.
! TYPE, BIND(C) :: h2m_v
!     INTEGER(C_INT) :: placeholder
! END TYPE h2m_v
! Found duplicate identifier.
! INTEGER(C_INT), public, BIND(C) :: h2m_v
END MODULE module_name_conflicts
! The following Fortran code was generated by the h2m-AutoFortran Tool.
! See the h2m README file for credits and help information.

MODULE module_prepend_tests
USE, INTRINSIC :: iso_c_binding
implicit none
INTEGER(C_INT), parameter, public :: h2m_bad_macro = 1
INTERFACE
SUBROUTINE h2m_bad_func_macro() BIND(C)
END SUBROUTINE h2m_bad_func_macro
END INTERFACE
INTEGER(C_INT), public, BIND(C) :: h2m_bad_int
CHARACTER(C_CHAR), public, BIND(C) :: h2m_bad_char_pointer
REAL(C_DOUBLE), public, BIND(C) :: h2m_bad_double_array(15)
TYPE(C_PTR), public, BIND(C) :: h2m_bad_char_pointer_array(3, 4)
TYPE, BIND(C) :: h2m_bad_struct
    INTEGER(C_INT) :: h2m_bad_struct_field
END TYPE h2m_bad_struct
TYPE(h2m_bad_struct), public, BIND(C) :: h2m_my_bad_struct_var
TYPE, BIND(C) :: h2m_bad_typedef_int
    INTEGER(C_INT)::h2m_bad_typedef_int_C_INT
END TYPE h2m_bad_typedef_int
ENUM, BIND(C) ! h2m_bad_enum
ENUMERATOR :: h2m_bad_enum_member = 0
ENUMERATOR :: h2m_bad_enum_member_two = 1
END ENUM ! h2m_bad_enum
INTERFACE
INTEGER(C_INT) FUNCTION h2m_bad_function(h2m_bad_argument) BIND(C)
    USE iso_c_binding, only: C_INT, C_PTR
    import
    TYPE(C_PTR), value :: h2m_bad_argument
END FUNCTION h2m_bad_function

TYPE(h2m_bad_struct) FUNCTION weird_function(my_bad, x) BIND(C)
    USE iso_c_binding, only: C_INT
    import
    TYPE(h2m_bad_struct), value :: my_bad
    INTEGER(C_INT), value :: x
END FUNCTION weird_function

END INTERFACE
END MODULE module_prepend_tests
! The following Fortran code was generated by the h2m-AutoFortran Tool.
! See the h2m README file for credits and help information.

MODULE module_struct_tests
USE, INTRINSIC :: iso_c_binding
implicit none
TYPE, BIND(C) :: x
    INTEGER(C_INT) :: my_int
    TYPE(C_PTR) :: my_pointer
    TYPE(C_PTR) :: my_struct_pointer
END TYPE x
TYPE, BIND(C) :: complicated
    TYPE(x) :: my_x
    INTEGER(C_INT) :: my_int
END TYPE complicated
TYPE, BIND(C) :: y
    REAL(C_DOUBLE) :: place_holder
END TYPE y
TYPE(y), public, BIND(C) :: my_y
TYPE, BIND(C) :: struct_y
    TYPE(y)::struct_y_y
END TYPE struct_y
! Found duplicate identifier.
! TYPE, BIND(C) :: y
!     TYPE(y)::y_y
! END TYPE y
TYPE, BIND(C) :: z
    TYPE(C_PTR) :: place_holder
END TYPE z
! Found duplicate identifier.
! TYPE, BIND(C) :: z
!     TYPE(z)::z_z
! END TYPE z
TYPE(z), public, BIND(C) :: my_z
TYPE(y), public, BIND(C) :: their_y = y(4.560000e+01)
END MODULE module_struct_tests
! The following Fortran code was generated by the h2m-AutoFortran Tool.
! See the h2m README file for credits and help information.
